--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>de.gematik.ti20.simsvc.server</groupId>
     <artifactId>popp-token-generator</artifactId>
-    <version>0.0.1</version>
+    <version>0.1.0</version>
 
     <name>Popp Token Generator</name>
     <description>Generator for Popp mock tokens</description>
@@ -83,6 +83,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <scope>provided</scope>
             <version>${version.lombok}</version>
         </dependency>
 
